@@ -3,6 +3,7 @@
 	* inst/include/Rcpp/module/class.h: Use variadic templates unconditionally
 	* inst/include/Rcpp/grow.h: Idem
 	* inst/include/Rcpp/DottedPair.h: Idem
+	* inst/include/Rcpp/Vector.h: Idem
 
         * inst/include/Rcpp/module/Module_generated_class_constructor.h: Removed
         * inst/include/Rcpp/module/Module_generated_class_factory.h: Idem
@@ -10,6 +11,7 @@
         * inst/include/Rcpp/module/Module_generated_Pointer_method.h: Idem
 	* inst/include/Rcpp/generated/grow__pairlist.h: Idem
 	* inst/include/Rcpp/generated/DottedPair__ctors.h: Idem
+	* inst/include/Rcpp/generated/Vector__create.h: Idem
 
 2025-03-15  Dirk Eddelbuettel  <edd@debian.org>
 
